--- a/main.ipynb
+++ b/main.ipynb
@@ -2,23 +2,151 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting fake-useragent\n",
+      "\u001b[33m  WARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x7a76900b64d0>: Failed to establish a new connection: [Errno 113] No route to host')': /packages/e4/99/60d8cf1b26938c2e0a57e232f7f15641dfcd6f8deda454d73e4145910ff6/fake_useragent-1.5.1-py3-none-any.whl\u001b[0m\u001b[33m\n",
+      "\u001b[0m  Downloading fake_useragent-1.5.1-py3-none-any.whl (17 kB)\n",
+      "Installing collected packages: fake-useragent\n",
+      "Successfully installed fake-useragent-1.5.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting webdriver-manager\n",
+      "  Downloading webdriver_manager-4.0.1-py2.py3-none-any.whl (27 kB)\n",
+      "Collecting python-dotenv\n",
+      "  Downloading python_dotenv-1.0.1-py3-none-any.whl (19 kB)\n",
+      "Requirement already satisfied: packaging in /home/khan/.local/lib/python3.10/site-packages (from webdriver-manager) (24.1)\n",
+      "Requirement already satisfied: requests in /usr/lib/python3/dist-packages (from webdriver-manager) (2.25.1)\n",
+      "Installing collected packages: python-dotenv, webdriver-manager\n",
+      "Successfully installed python-dotenv-1.0.1 webdriver-manager-4.0.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting selenium\n",
+      "  Downloading selenium-4.22.0-py3-none-any.whl (9.4 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.4/9.4 MB\u001b[0m \u001b[31m213.9 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:02\u001b[0m\n",
+      "\u001b[?25hCollecting trio~=0.17\n",
+      "  Downloading trio-0.26.0-py3-none-any.whl (475 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m475.7/475.7 KB\u001b[0m \u001b[31m436.2 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m kB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m:01\u001b[0m\n",
+      "\u001b[?25hCollecting websocket-client>=1.8.0\n",
+      "  Downloading websocket_client-1.8.0-py3-none-any.whl (58 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.8/58.8 KB\u001b[0m \u001b[31m446.6 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m1m418.0 kB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: typing_extensions>=4.9.0 in /home/khan/.local/lib/python3.10/site-packages (from selenium) (4.12.2)\n",
+      "Collecting trio-websocket~=0.9\n",
+      "  Downloading trio_websocket-0.11.1-py3-none-any.whl (17 kB)\n",
+      "Requirement already satisfied: urllib3[socks]<3,>=1.26 in /usr/lib/python3/dist-packages (from selenium) (1.26.5)\n",
+      "Collecting certifi>=2021.10.8\n",
+      "  Downloading certifi-2024.7.4-py3-none-any.whl (162 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m163.0/163.0 KB\u001b[0m \u001b[31m440.5 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m1m447.6 kB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting attrs>=23.2.0\n",
+      "  Downloading attrs-23.2.0-py3-none-any.whl (60 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.8/60.8 KB\u001b[0m \u001b[31m453.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m1m425.1 kB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting sniffio>=1.3.0\n",
+      "  Downloading sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
+      "Requirement already satisfied: exceptiongroup in /home/khan/.local/lib/python3.10/site-packages (from trio~=0.17->selenium) (1.2.2)\n",
+      "Collecting outcome\n",
+      "  Downloading outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
+      "Requirement already satisfied: idna in /usr/lib/python3/dist-packages (from trio~=0.17->selenium) (3.3)\n",
+      "Collecting sortedcontainers\n",
+      "  Downloading sortedcontainers-2.4.0-py2.py3-none-any.whl (29 kB)\n",
+      "Collecting wsproto>=0.14\n",
+      "  Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in /usr/lib/python3/dist-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
+      "Collecting h11<1,>=0.9.0\n",
+      "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 KB\u001b[0m \u001b[31m375.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m kB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: sortedcontainers, websocket-client, sniffio, h11, certifi, attrs, wsproto, outcome, trio, trio-websocket, selenium\n",
+      "Successfully installed attrs-23.2.0 certifi-2024.7.4 h11-0.14.0 outcome-1.3.0.post0 selenium-4.22.0 sniffio-1.3.1 sortedcontainers-2.4.0 trio-0.26.0 trio-websocket-0.11.1 websocket-client-1.8.0 wsproto-1.2.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting undetected-chromedriver\n",
+      "  Using cached undetected_chromedriver-3.5.5-py3-none-any.whl\n",
+      "Collecting websockets\n",
+      "  Downloading websockets-12.0-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (130 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m130.2/130.2 KB\u001b[0m \u001b[31m129.7 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m1m502.2 kB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests in /usr/lib/python3/dist-packages (from undetected-chromedriver) (2.25.1)\n",
+      "Requirement already satisfied: selenium>=4.9.0 in /home/khan/.local/lib/python3.10/site-packages (from undetected-chromedriver) (4.22.0)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in /home/khan/.local/lib/python3.10/site-packages (from selenium>=4.9.0->undetected-chromedriver) (2024.7.4)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in /home/khan/.local/lib/python3.10/site-packages (from selenium>=4.9.0->undetected-chromedriver) (0.11.1)\n",
+      "Requirement already satisfied: websocket-client>=1.8.0 in /home/khan/.local/lib/python3.10/site-packages (from selenium>=4.9.0->undetected-chromedriver) (1.8.0)\n",
+      "Requirement already satisfied: trio~=0.17 in /home/khan/.local/lib/python3.10/site-packages (from selenium>=4.9.0->undetected-chromedriver) (0.26.0)\n",
+      "Requirement already satisfied: typing_extensions>=4.9.0 in /home/khan/.local/lib/python3.10/site-packages (from selenium>=4.9.0->undetected-chromedriver) (4.12.2)\n",
+      "Requirement already satisfied: urllib3[socks]<3,>=1.26 in /usr/lib/python3/dist-packages (from selenium>=4.9.0->undetected-chromedriver) (1.26.5)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in /home/khan/.local/lib/python3.10/site-packages (from trio~=0.17->selenium>=4.9.0->undetected-chromedriver) (1.3.1)\n",
+      "Requirement already satisfied: exceptiongroup in /home/khan/.local/lib/python3.10/site-packages (from trio~=0.17->selenium>=4.9.0->undetected-chromedriver) (1.2.2)\n",
+      "Requirement already satisfied: idna in /usr/lib/python3/dist-packages (from trio~=0.17->selenium>=4.9.0->undetected-chromedriver) (3.3)\n",
+      "Requirement already satisfied: attrs>=23.2.0 in /home/khan/.local/lib/python3.10/site-packages (from trio~=0.17->selenium>=4.9.0->undetected-chromedriver) (23.2.0)\n",
+      "Requirement already satisfied: outcome in /home/khan/.local/lib/python3.10/site-packages (from trio~=0.17->selenium>=4.9.0->undetected-chromedriver) (1.3.0.post0)\n",
+      "Requirement already satisfied: sortedcontainers in /home/khan/.local/lib/python3.10/site-packages (from trio~=0.17->selenium>=4.9.0->undetected-chromedriver) (2.4.0)\n",
+      "Requirement already satisfied: wsproto>=0.14 in /home/khan/.local/lib/python3.10/site-packages (from trio-websocket~=0.9->selenium>=4.9.0->undetected-chromedriver) (1.2.0)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in /usr/lib/python3/dist-packages (from urllib3[socks]<3,>=1.26->selenium>=4.9.0->undetected-chromedriver) (1.7.1)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in /home/khan/.local/lib/python3.10/site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium>=4.9.0->undetected-chromedriver) (0.14.0)\n",
+      "Installing collected packages: websockets, undetected-chromedriver\n",
+      "Successfully installed undetected-chromedriver-3.5.5 websockets-12.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: undetected-chromedriver in /home/khan/.local/lib/python3.10/site-packages (3.5.5)\n",
+      "Requirement already satisfied: selenium>=4.9.0 in /home/khan/.local/lib/python3.10/site-packages (from undetected-chromedriver) (4.22.0)\n",
+      "Requirement already satisfied: requests in /usr/lib/python3/dist-packages (from undetected-chromedriver) (2.25.1)\n",
+      "Requirement already satisfied: websockets in /home/khan/.local/lib/python3.10/site-packages (from undetected-chromedriver) (12.0)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in /home/khan/.local/lib/python3.10/site-packages (from selenium>=4.9.0->undetected-chromedriver) (2024.7.4)\n",
+      "Requirement already satisfied: urllib3[socks]<3,>=1.26 in /usr/lib/python3/dist-packages (from selenium>=4.9.0->undetected-chromedriver) (1.26.5)\n",
+      "Requirement already satisfied: trio~=0.17 in /home/khan/.local/lib/python3.10/site-packages (from selenium>=4.9.0->undetected-chromedriver) (0.26.0)\n",
+      "Requirement already satisfied: typing_extensions>=4.9.0 in /home/khan/.local/lib/python3.10/site-packages (from selenium>=4.9.0->undetected-chromedriver) (4.12.2)\n",
+      "Requirement already satisfied: websocket-client>=1.8.0 in /home/khan/.local/lib/python3.10/site-packages (from selenium>=4.9.0->undetected-chromedriver) (1.8.0)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in /home/khan/.local/lib/python3.10/site-packages (from selenium>=4.9.0->undetected-chromedriver) (0.11.1)\n",
+      "Requirement already satisfied: attrs>=23.2.0 in /home/khan/.local/lib/python3.10/site-packages (from trio~=0.17->selenium>=4.9.0->undetected-chromedriver) (23.2.0)\n",
+      "Requirement already satisfied: exceptiongroup in /home/khan/.local/lib/python3.10/site-packages (from trio~=0.17->selenium>=4.9.0->undetected-chromedriver) (1.2.2)\n",
+      "Requirement already satisfied: sortedcontainers in /home/khan/.local/lib/python3.10/site-packages (from trio~=0.17->selenium>=4.9.0->undetected-chromedriver) (2.4.0)\n",
+      "Requirement already satisfied: idna in /usr/lib/python3/dist-packages (from trio~=0.17->selenium>=4.9.0->undetected-chromedriver) (3.3)\n",
+      "Requirement already satisfied: outcome in /home/khan/.local/lib/python3.10/site-packages (from trio~=0.17->selenium>=4.9.0->undetected-chromedriver) (1.3.0.post0)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in /home/khan/.local/lib/python3.10/site-packages (from trio~=0.17->selenium>=4.9.0->undetected-chromedriver) (1.3.1)\n",
+      "Requirement already satisfied: wsproto>=0.14 in /home/khan/.local/lib/python3.10/site-packages (from trio-websocket~=0.9->selenium>=4.9.0->undetected-chromedriver) (1.2.0)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in /usr/lib/python3/dist-packages (from urllib3[socks]<3,>=1.26->selenium>=4.9.0->undetected-chromedriver) (1.7.1)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in /home/khan/.local/lib/python3.10/site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium>=4.9.0->undetected-chromedriver) (0.14.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting free-proxy\n",
+      "  Using cached free_proxy-1.1.1-py3-none-any.whl\n",
+      "Collecting lxml\n",
+      "  Downloading lxml-5.2.2-cp310-cp310-manylinux_2_28_x86_64.whl (5.0 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.0/5.0 MB\u001b[0m \u001b[31m418.2 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests in /usr/lib/python3/dist-packages (from free-proxy) (2.25.1)\n",
+      "Installing collected packages: lxml, free-proxy\n",
+      "Successfully installed free-proxy-1.1.1 lxml-5.2.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting tqdm\n",
+      "  Downloading tqdm-4.66.4-py3-none-any.whl (78 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.3/78.3 KB\u001b[0m \u001b[31m505.9 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m1m533.7 kB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: tqdm\n",
+      "Successfully installed tqdm-4.66.4\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: fake-useragent in /home/khan/.local/lib/python3.10/site-packages (1.5.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "# %pip install fake-useragent\n",
-    "# %pip install webdriver-manager\n",
-    "# %pip install selenium\n",
-    "# %pip install undetected-chromedriver\n",
-    "# %pip install undetected-chromedriver -U\n",
-    "# %pip install free-proxy\n",
-    "# %pip install tqdm\n",
-    "# %pip install --upgrade fake-useragent"
+    "%pip install fake-useragent\n",
+    "%pip install webdriver-manager\n",
+    "%pip install selenium\n",
+    "%pip install undetected-chromedriver\n",
+    "%pip install undetected-chromedriver -U\n",
+    "%pip install free-proxy\n",
+    "%pip install tqdm\n",
+    "%pip install --upgrade fake-useragent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +231,7 @@
     "                    profile_headline = self.browser.find_element(By.CSS_SELECTOR, 'h2.mb-0.pt-lg-2x.h4').text\n",
     "                    profile_desc = self.browser.find_element(By.CSS_SELECTOR, 'div.text-body.text-light-on-inverse.air3-line-clamp-wrapper').text\n",
     "                    profile_skills = self.browser.find_element(By.CSS_SELECTOR, 'ul.d-flex.list-unstyled.flex-wrap-wrap.mb-0.air3-token-wrap').text\n",
-    "                    profiles.append({\"Name\":profile_name, \"Location\":profile_loc, \"Badge\":profile_badge, \"Headline\":profile_headline, \n",
+    "                    profiles.append({\"Profile-link\": prof,\"Name\":profile_name, \"Location\":profile_loc, \"Badge\":profile_badge, \"Headline\":profile_headline, \n",
     "                                     \"Description\":profile_desc, \"Skills\":profile_skills})\n",
     "\n",
     "                except:\n",
@@ -114,7 +242,7 @@
     "        self.browser.switch_to.window(self.browser.window_handles[0])\n",
     "        \n",
     "        with open('data.json', 'w', encoding='utf-8') as f:\n",
-    "            json.dump(data, f, indent=2)    \n",
+    "            json.dump(data_lst, f, indent=2)    \n",
     "        self.browser.quit()\n",
     "\n",
     "    def main(self):     \n",
